test-expected/large/mail/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: mail
    foo.com/duversion: 1.3.11-20190909.1568065738092
    foo.com/version: 1.3.11
  labels:
    app.kubernetes.io/name: mail
    helm.sh/chart: mail-1.3.11
  name: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mail
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mail
        app.kubernetes.io/name: mail
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-mail:1.3.11-20190909.1568065738092
        imagePullPolicy: IfNotPresent
        name: mail
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
