test-expected/large/mail/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: mail
    foo.com/duversion: 1.3.11-20190909.1568065738092
    foo.com/version: 1.3.11
  labels:
    app.kubernetes.io/name: mail
    helm.sh/chart: mail-1.3.11
  name: mail
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: mail
  type: ClusterIP
