test-expected/large/mail/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: mail
    foo.com/duversion: 1.3.11-20190909.1568065738092
    foo.com/version: 1.3.11
  labels:
    app.kubernetes.io/name: mail
    helm.sh/chart: mail-1.3.11
  name: mail
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /mail
    - uri:
        prefix: /mail/
    route:
    - destination:
        host: mail.peekay.svc.cluster.local
